[3.8] bpo-42237: Fix os.sendfile() on illumos (GH-23154). (cherry picked from commit fd4ed57674c675e05bd5d577dd5047a333c76c78)

Co-authored-by: Jakub Stasiak <jakub@stasiak.at>